zetasql/parser/tree_sitter/test/corpus/analytic_functions.txt
==================
Test Case 1
==================
# TODO: Remove this after parse locations have been manually
# verified as correct.
select f() over () from T

/* Expected ZetaSQL AST:
QueryStatement [0-25]
  Query [0-25]
    Select [0-25]
      SelectList [7-18]
        SelectColumn [7-18]
          AnalyticFunctionCall [7-18]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-18]
      FromClause [19-25]
        TablePathExpression [24-25]
          PathExpression [24-25]
            Identifier(T) [24-25]
*/
---
(source_file [0, 0] - [19, 2]
  (comment [0, 0] - [0, 60])
  (comment [1, 0] - [1, 22])
  (statement [2, 0] - [2, 25]
    (select_statement [2, 0] - [2, 25]
      (select_clause [2, 0] - [2, 18]
        (select_list [2, 7] - [2, 18]
          (select_expression [2, 7] - [2, 18]
            (expression [2, 7] - [2, 18]
              (function_call [2, 7] - [2, 18]
                (path_expression [2, 7] - [2, 8]
                  (identifier [2, 7] - [2, 8]))
                (over_clause [2, 11] - [2, 18]))))))
      (from_clause [2, 19] - [2, 25]
        (from_item [2, 24] - [2, 25]
          (table_expression [2, 24] - [2, 25]
            (path_expression [2, 24] - [2, 25]
              (identifier [2, 24] - [2, 25])))))))
  (comment [4, 0] - [19, 2]))

==================
Test Case 2
==================
select f(a, b+1, sum(c)) over () from T

/* Expected ZetaSQL AST:
QueryStatement [0-39]
  Query [0-39]
    Select [0-39]
      SelectList [7-32]
        SelectColumn [7-32]
          AnalyticFunctionCall [7-32]
            FunctionCall [7-24]
              PathExpression [7-8]
                Identifier(f) [7-8]
              PathExpression [9-10]
                Identifier(a) [9-10]
              BinaryExpression(+) [12-15]
                PathExpression [12-13]
                  Identifier(b) [12-13]
                IntLiteral(1) [14-15]
              FunctionCall [17-23]
                PathExpression [17-20]
                  Identifier(sum) [17-20]
                PathExpression [21-22]
                  Identifier(c) [21-22]
            WindowSpecification [30-32]
      FromClause [33-39]
        TablePathExpression [38-39]
          PathExpression [38-39]
            Identifier(T) [38-39]
*/
---
(source_file [0, 0] - [28, 2]
  (statement [0, 0] - [0, 39]
    (select_statement [0, 0] - [0, 39]
      (select_clause [0, 0] - [0, 32]
        (select_list [0, 7] - [0, 32]
          (select_expression [0, 7] - [0, 32]
            (expression [0, 7] - [0, 32]
              (function_call [0, 7] - [0, 32]
                (path_expression [0, 7] - [0, 8]
                  (identifier [0, 7] - [0, 8]))
                (function_arguments [0, 9] - [0, 23]
                  (function_argument [0, 9] - [0, 10]
                    (expression [0, 9] - [0, 10]
                      (path_expression [0, 9] - [0, 10]
                        (identifier [0, 9] - [0, 10]))))
                  (function_argument [0, 12] - [0, 15]
                    (expression [0, 12] - [0, 15]
                      (binary_expression [0, 12] - [0, 15]
                        (expression [0, 12] - [0, 13]
                          (path_expression [0, 12] - [0, 13]
                            (identifier [0, 12] - [0, 13])))
                        (expression [0, 14] - [0, 15]
                          (number [0, 14] - [0, 15])))))
                  (function_argument [0, 17] - [0, 23]
                    (expression [0, 17] - [0, 23]
                      (function_call [0, 17] - [0, 23]
                        (path_expression [0, 17] - [0, 20]
                          (identifier [0, 17] - [0, 20]))
                        (function_arguments [0, 21] - [0, 22]
                          (function_argument [0, 21] - [0, 22]
                            (expression [0, 21] - [0, 22]
                              (path_expression [0, 21] - [0, 22]
                                (identifier [0, 21] - [0, 22])))))))))
                (over_clause [0, 25] - [0, 32]))))))
      (from_clause [0, 33] - [0, 39]
        (from_item [0, 38] - [0, 39]
          (table_expression [0, 38] - [0, 39]
            (path_expression [0, 38] - [0, 39]
              (identifier [0, 38] - [0, 39])))))))
  (comment [2, 0] - [28, 2]))

==================
Test Case 3
==================
select f(distinct a, b) over () from T

/* Expected ZetaSQL AST:
QueryStatement [0-38]
  Query [0-38]
    Select [0-38]
      SelectList [7-31]
        SelectColumn [7-31]
          AnalyticFunctionCall [7-31]
            FunctionCall(distinct=true) [7-23]
              PathExpression [7-8]
                Identifier(f) [7-8]
              PathExpression [18-19]
                Identifier(a) [18-19]
              PathExpression [21-22]
                Identifier(b) [21-22]
            WindowSpecification [29-31]
      FromClause [32-38]
        TablePathExpression [37-38]
          PathExpression [37-38]
            Identifier(T) [37-38]
*/
---
(source_file [0, 0] - [21, 2]
  (statement [0, 0] - [0, 38]
    (select_statement [0, 0] - [0, 38]
      (select_clause [0, 0] - [0, 31]
        (select_list [0, 7] - [0, 31]
          (select_expression [0, 7] - [0, 31]
            (expression [0, 7] - [0, 31]
              (function_call [0, 7] - [0, 31]
                (path_expression [0, 7] - [0, 8]
                  (identifier [0, 7] - [0, 8]))
                (function_arguments [0, 18] - [0, 22]
                  (function_argument [0, 18] - [0, 19]
                    (expression [0, 18] - [0, 19]
                      (path_expression [0, 18] - [0, 19]
                        (identifier [0, 18] - [0, 19]))))
                  (function_argument [0, 21] - [0, 22]
                    (expression [0, 21] - [0, 22]
                      (path_expression [0, 21] - [0, 22]
                        (identifier [0, 21] - [0, 22])))))
                (over_clause [0, 24] - [0, 31]))))))
      (from_clause [0, 32] - [0, 38]
        (from_item [0, 37] - [0, 38]
          (table_expression [0, 37] - [0, 38]
            (path_expression [0, 37] - [0, 38]
              (identifier [0, 37] - [0, 38])))))))
  (comment [2, 0] - [21, 2]))

==================
Test Case 4
==================
select f() over (partition by a, b+1, 1, sum(c)) from T

/* Expected ZetaSQL AST:
QueryStatement [0-55]
  Query [0-55]
    Select [0-55]
      SelectList [7-48]
        SelectColumn [7-48]
          AnalyticFunctionCall [7-48]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-48]
              PartitionBy [17-47]
                PathExpression [30-31]
                  Identifier(a) [30-31]
                BinaryExpression(+) [33-36]
                  PathExpression [33-34]
                    Identifier(b) [33-34]
                  IntLiteral(1) [35-36]
                IntLiteral(1) [38-39]
                FunctionCall [41-47]
                  PathExpression [41-44]
                    Identifier(sum) [41-44]
                  PathExpression [45-46]
                    Identifier(c) [45-46]
      FromClause [49-55]
        TablePathExpression [54-55]
          PathExpression [54-55]
            Identifier(T) [54-55]
*/
---
(source_file [0, 0] - [30, 2]
  (statement [0, 0] - [0, 55]
    (select_statement [0, 0] - [0, 55]
      (select_clause [0, 0] - [0, 48]
        (select_list [0, 7] - [0, 48]
          (select_expression [0, 7] - [0, 48]
            (expression [0, 7] - [0, 48]
              (function_call [0, 7] - [0, 48]
                (path_expression [0, 7] - [0, 8]
                  (identifier [0, 7] - [0, 8]))
                (over_clause [0, 11] - [0, 48]
                  (partition_by_clause [0, 17] - [0, 47]
                    (expression_list [0, 30] - [0, 47]
                      (expression [0, 30] - [0, 31]
                        (path_expression [0, 30] - [0, 31]
                          (identifier [0, 30] - [0, 31])))
                      (expression [0, 33] - [0, 36]
                        (binary_expression [0, 33] - [0, 36]
                          (expression [0, 33] - [0, 34]
                            (path_expression [0, 33] - [0, 34]
                              (identifier [0, 33] - [0, 34])))
                          (expression [0, 35] - [0, 36]
                            (number [0, 35] - [0, 36]))))
                      (expression [0, 38] - [0, 39]
                        (number [0, 38] - [0, 39]))
                      (expression [0, 41] - [0, 47]
                        (function_call [0, 41] - [0, 47]
                          (path_expression [0, 41] - [0, 44]
                            (identifier [0, 41] - [0, 44]))
                          (function_arguments [0, 45] - [0, 46]
                            (function_argument [0, 45] - [0, 46]
                              (expression [0, 45] - [0, 46]
                                (path_expression [0, 45] - [0, 46]
                                  (identifier [0, 45] - [0, 46])))))))))))))))
      (from_clause [0, 49] - [0, 55]
        (from_item [0, 54] - [0, 55]
          (table_expression [0, 54] - [0, 55]
            (path_expression [0, 54] - [0, 55]
              (identifier [0, 54] - [0, 55])))))))
  (comment [2, 0] - [30, 2]))

==================
Test Case 5
==================
select f() over (order by a, b+1, 1, sum(c)) from T

/* Expected ZetaSQL AST:
QueryStatement [0-51]
  Query [0-51]
    Select [0-51]
      SelectList [7-44]
        SelectColumn [7-44]
          AnalyticFunctionCall [7-44]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-44]
              OrderBy [17-43]
                OrderingExpression(ASC) [26-27]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
                OrderingExpression(ASC) [29-32]
                  BinaryExpression(+) [29-32]
                    PathExpression [29-30]
                      Identifier(b) [29-30]
                    IntLiteral(1) [31-32]
                OrderingExpression(ASC) [34-35]
                  IntLiteral(1) [34-35]
                OrderingExpression(ASC) [37-43]
                  FunctionCall [37-43]
                    PathExpression [37-40]
                      Identifier(sum) [37-40]
                    PathExpression [41-42]
                      Identifier(c) [41-42]
      FromClause [45-51]
        TablePathExpression [50-51]
          PathExpression [50-51]
            Identifier(T) [50-51]
*/
---
(source_file [0, 0] - [34, 2]
  (statement [0, 0] - [0, 51]
    (select_statement [0, 0] - [0, 51]
      (select_clause [0, 0] - [0, 44]
        (select_list [0, 7] - [0, 44]
          (select_expression [0, 7] - [0, 44]
            (expression [0, 7] - [0, 44]
              (function_call [0, 7] - [0, 44]
                (path_expression [0, 7] - [0, 8]
                  (identifier [0, 7] - [0, 8]))
                (over_clause [0, 11] - [0, 44]
                  (order_by_clause [0, 17] - [0, 43]
                    (order_expression_list [0, 26] - [0, 43]
                      (order_expression [0, 26] - [0, 27]
                        (expression [0, 26] - [0, 27]
                          (path_expression [0, 26] - [0, 27]
                            (identifier [0, 26] - [0, 27]))))
                      (order_expression [0, 29] - [0, 32]
                        (expression [0, 29] - [0, 32]
                          (binary_expression [0, 29] - [0, 32]
                            (expression [0, 29] - [0, 30]
                              (path_expression [0, 29] - [0, 30]
                                (identifier [0, 29] - [0, 30])))
                            (expression [0, 31] - [0, 32]
                              (number [0, 31] - [0, 32])))))
                      (order_expression [0, 34] - [0, 35]
                        (expression [0, 34] - [0, 35]
                          (number [0, 34] - [0, 35])))
                      (order_expression [0, 37] - [0, 43]
                        (expression [0, 37] - [0, 43]
                          (function_call [0, 37] - [0, 43]
                            (path_expression [0, 37] - [0, 40]
                              (identifier [0, 37] - [0, 40]))
                            (function_arguments [0, 41] - [0, 42]
                              (function_argument [0, 41] - [0, 42]
                                (expression [0, 41] - [0, 42]
                                  (path_expression [0, 41] - [0, 42]
                                    (identifier [0, 41] - [0, 42]))))))))))))))))
      (from_clause [0, 45] - [0, 51]
        (from_item [0, 50] - [0, 51]
          (table_expression [0, 50] - [0, 51]
            (path_expression [0, 50] - [0, 51]
              (identifier [0, 50] - [0, 51])))))))
  (comment [2, 0] - [34, 2]))

==================
Test Case 6
==================
select f() over (partition by a order by a)
from T

/* Expected ZetaSQL AST:
QueryStatement [0-50]
  Query [0-50]
    Select [0-50]
      SelectList [7-43]
        SelectColumn [7-43]
          AnalyticFunctionCall [7-43]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-43]
              PartitionBy [17-31]
                PathExpression [30-31]
                  Identifier(a) [30-31]
              OrderBy [32-42]
                OrderingExpression(ASC) [41-42]
                  PathExpression [41-42]
                    Identifier(a) [41-42]
      FromClause [44-50]
        TablePathExpression [49-50]
          PathExpression [49-50]
            Identifier(T) [49-50]
*/
---
(source_file [0, 0] - [25, 2]
  (statement [0, 0] - [1, 6]
    (select_statement [0, 0] - [1, 6]
      (select_clause [0, 0] - [0, 43]
        (select_list [0, 7] - [0, 43]
          (select_expression [0, 7] - [0, 43]
            (expression [0, 7] - [0, 43]
              (function_call [0, 7] - [0, 43]
                (path_expression [0, 7] - [0, 8]
                  (identifier [0, 7] - [0, 8]))
                (over_clause [0, 11] - [0, 43]
                  (partition_by_clause [0, 17] - [0, 31]
                    (expression_list [0, 30] - [0, 31]
                      (expression [0, 30] - [0, 31]
                        (path_expression [0, 30] - [0, 31]
                          (identifier [0, 30] - [0, 31])))))
                  (order_by_clause [0, 32] - [0, 42]
                    (order_expression_list [0, 41] - [0, 42]
                      (order_expression [0, 41] - [0, 42]
                        (expression [0, 41] - [0, 42]
                          (path_expression [0, 41] - [0, 42]
                            (identifier [0, 41] - [0, 42]))))))))))))
      (from_clause [1, 0] - [1, 6]
        (from_item [1, 5] - [1, 6]
          (table_expression [1, 5] - [1, 6]
            (path_expression [1, 5] - [1, 6]
              (identifier [1, 5] - [1, 6])))))))
  (comment [3, 0] - [25, 2]))

==================
Test Case 7
==================
# One-sided window.
select f() over (rows unbounded preceding)

/* Expected ZetaSQL AST:
QueryStatement [0-42]
  Query [0-42]
    Select [0-42]
      SelectList [7-42]
        SelectColumn [7-42]
          AnalyticFunctionCall [7-42]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-42]
              WindowFrame(ROWS) [17-41]
                WindowFrameExpr(UNBOUNDED PRECEDING) [22-41]
*/
---
(source_file (ERROR))

==================
Test Case 8
==================
# One-sided window.
select f() over (range unbounded preceding)

/* Expected ZetaSQL AST:
QueryStatement [0-43]
  Query [0-43]
    Select [0-43]
      SelectList [7-43]
        SelectColumn [7-43]
          AnalyticFunctionCall [7-43]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-43]
              WindowFrame(RANGE) [17-42]
                WindowFrameExpr(UNBOUNDED PRECEDING) [23-42]
*/
---
(source_file (ERROR))

==================
Test Case 9
==================
select f() over (rows 5+5 preceding)

/* Expected ZetaSQL AST:
QueryStatement [0-36]
  Query [0-36]
    Select [0-36]
      SelectList [7-36]
        SelectColumn [7-36]
          AnalyticFunctionCall [7-36]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-36]
              WindowFrame(ROWS) [17-35]
                WindowFrameExpr(OFFSET PRECEDING) [22-35]
                  BinaryExpression(+) [22-25]
                    IntLiteral(5) [22-23]
                    IntLiteral(5) [24-25]
*/
---
(source_file (ERROR))

==================
Test Case 10
==================
select f() over (range 5+5 preceding)

/* Expected ZetaSQL AST:
QueryStatement [0-37]
  Query [0-37]
    Select [0-37]
      SelectList [7-37]
        SelectColumn [7-37]
          AnalyticFunctionCall [7-37]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-37]
              WindowFrame(RANGE) [17-36]
                WindowFrameExpr(OFFSET PRECEDING) [23-36]
                  BinaryExpression(+) [23-26]
                    IntLiteral(5) [23-24]
                    IntLiteral(5) [25-26]
*/
---
(source_file (ERROR))

==================
Test Case 11
==================
select f() over (rows current row)

/* Expected ZetaSQL AST:
QueryStatement [0-34]
  Query [0-34]
    Select [0-34]
      SelectList [7-34]
        SelectColumn [7-34]
          AnalyticFunctionCall [7-34]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-34]
              WindowFrame(ROWS) [17-33]
                WindowFrameExpr(CURRENT ROW) [22-33]
*/
---
(source_file (ERROR))

==================
Test Case 12
==================
select f() over (range current row)

/* Expected ZetaSQL AST:
QueryStatement [0-35]
  Query [0-35]
    Select [0-35]
      SelectList [7-35]
        SelectColumn [7-35]
          AnalyticFunctionCall [7-35]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-35]
              WindowFrame(RANGE) [17-34]
                WindowFrameExpr(CURRENT ROW) [23-34]
*/
---
(source_file (ERROR))

==================
Test Case 13
==================
# Two-sided window. Invalid framing boundaries will be captured by the resolver.
# UNBOUNDED_PRECEDING as the ending boundary.
select f() over (rows between 5+5 preceding and unbounded preceding)
from T

/* Expected ZetaSQL AST:
QueryStatement [0-75]
  Query [0-75]
    Select [0-75]
      SelectList [7-68]
        SelectColumn [7-68]
          AnalyticFunctionCall [7-68]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-68]
              WindowFrame(ROWS) [17-67]
                WindowFrameExpr(OFFSET PRECEDING) [30-43]
                  BinaryExpression(+) [30-33]
                    IntLiteral(5) [30-31]
                    IntLiteral(5) [32-33]
                WindowFrameExpr(UNBOUNDED PRECEDING) [48-67]
      FromClause [69-75]
        TablePathExpression [74-75]
          PathExpression [74-75]
            Identifier(T) [74-75]
*/
---
(source_file (ERROR))

==================
Test Case 14
==================
# Two-sided window. Invalid framing boundaries will be captured by the resolver.
# UNBOUNDED_PRECEDING as the ending boundary.
select f() over (range between 5+5 preceding and unbounded preceding)
from T

/* Expected ZetaSQL AST:
QueryStatement [0-76]
  Query [0-76]
    Select [0-76]
      SelectList [7-69]
        SelectColumn [7-69]
          AnalyticFunctionCall [7-69]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-69]
              WindowFrame(RANGE) [17-68]
                WindowFrameExpr(OFFSET PRECEDING) [31-44]
                  BinaryExpression(+) [31-34]
                    IntLiteral(5) [31-32]
                    IntLiteral(5) [33-34]
                WindowFrameExpr(UNBOUNDED PRECEDING) [49-68]
      FromClause [70-76]
        TablePathExpression [75-76]
          PathExpression [75-76]
            Identifier(T) [75-76]
*/
---
(source_file (ERROR))

==================
Test Case 15
==================
# OFFSET_PRECEDING as the ending boundary.
select f() over (rows between 5+5 preceding and 5+5 preceding)
from T

/* Expected ZetaSQL AST:
QueryStatement [0-69]
  Query [0-69]
    Select [0-69]
      SelectList [7-62]
        SelectColumn [7-62]
          AnalyticFunctionCall [7-62]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-62]
              WindowFrame(ROWS) [17-61]
                WindowFrameExpr(OFFSET PRECEDING) [30-43]
                  BinaryExpression(+) [30-33]
                    IntLiteral(5) [30-31]
                    IntLiteral(5) [32-33]
                WindowFrameExpr(OFFSET PRECEDING) [48-61]
                  BinaryExpression(+) [48-51]
                    IntLiteral(5) [48-49]
                    IntLiteral(5) [50-51]
      FromClause [63-69]
        TablePathExpression [68-69]
          PathExpression [68-69]
            Identifier(T) [68-69]
*/
---
(source_file (ERROR))

==================
Test Case 16
==================
# CURRENT_ROW as the ending boundary.
select f() over (range between 5+5 preceding and current row)
from T

/* Expected ZetaSQL AST:
QueryStatement [0-68]
  Query [0-68]
    Select [0-68]
      SelectList [7-61]
        SelectColumn [7-61]
          AnalyticFunctionCall [7-61]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-61]
              WindowFrame(RANGE) [17-60]
                WindowFrameExpr(OFFSET PRECEDING) [31-44]
                  BinaryExpression(+) [31-34]
                    IntLiteral(5) [31-32]
                    IntLiteral(5) [33-34]
                WindowFrameExpr(CURRENT ROW) [49-60]
      FromClause [62-68]
        TablePathExpression [67-68]
          PathExpression [67-68]
            Identifier(T) [67-68]
*/
---
(source_file (ERROR))

==================
Test Case 17
==================
# OFFSET_FOLLOWING as the ending boundary.
select f() over (rows between 5+5 preceding and 5+5 following)
from T

/* Expected ZetaSQL AST:
QueryStatement [0-69]
  Query [0-69]
    Select [0-69]
      SelectList [7-62]
        SelectColumn [7-62]
          AnalyticFunctionCall [7-62]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-62]
              WindowFrame(ROWS) [17-61]
                WindowFrameExpr(OFFSET PRECEDING) [30-43]
                  BinaryExpression(+) [30-33]
                    IntLiteral(5) [30-31]
                    IntLiteral(5) [32-33]
                WindowFrameExpr(OFFSET FOLLOWING) [48-61]
                  BinaryExpression(+) [48-51]
                    IntLiteral(5) [48-49]
                    IntLiteral(5) [50-51]
      FromClause [63-69]
        TablePathExpression [68-69]
          PathExpression [68-69]
            Identifier(T) [68-69]
*/
---
(source_file (ERROR))

==================
Test Case 18
==================
# UNBOUNDED_FOLLOWING as the ending boundary.
select f() over (range between 5+5 preceding and unbounded following)
from T

/* Expected ZetaSQL AST:
QueryStatement [0-76]
  Query [0-76]
    Select [0-76]
      SelectList [7-69]
        SelectColumn [7-69]
          AnalyticFunctionCall [7-69]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-69]
              WindowFrame(RANGE) [17-68]
                WindowFrameExpr(OFFSET PRECEDING) [31-44]
                  BinaryExpression(+) [31-34]
                    IntLiteral(5) [31-32]
                    IntLiteral(5) [33-34]
                WindowFrameExpr(UNBOUNDED FOLLOWING) [49-68]
      FromClause [70-76]
        TablePathExpression [75-76]
          PathExpression [75-76]
            Identifier(T) [75-76]
*/
---
(source_file (ERROR))

==================
Test Case 19
==================
select f() over (partition by a order by b rows current row) from T

/* Expected ZetaSQL AST:
QueryStatement [0-67]
  Query [0-67]
    Select [0-67]
      SelectList [7-60]
        SelectColumn [7-60]
          AnalyticFunctionCall [7-60]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-60]
              PartitionBy [17-31]
                PathExpression [30-31]
                  Identifier(a) [30-31]
              OrderBy [32-42]
                OrderingExpression(ASC) [41-42]
                  PathExpression [41-42]
                    Identifier(b) [41-42]
              WindowFrame(ROWS) [43-59]
                WindowFrameExpr(CURRENT ROW) [48-59]
      FromClause [61-67]
        TablePathExpression [66-67]
          PathExpression [66-67]
            Identifier(T) [66-67]
*/
---
(source_file (ERROR))

==================
Test Case 20
==================
# partition by, order by and framing are all optional.
# The resolver will validate the requirements for specific analytic functions.
select f() over (partition by a rows current row) from T

/* Expected ZetaSQL AST:
QueryStatement [0-56]
  Query [0-56]
    Select [0-56]
      SelectList [7-49]
        SelectColumn [7-49]
          AnalyticFunctionCall [7-49]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-49]
              PartitionBy [17-31]
                PathExpression [30-31]
                  Identifier(a) [30-31]
              WindowFrame(ROWS) [32-48]
                WindowFrameExpr(CURRENT ROW) [37-48]
      FromClause [50-56]
        TablePathExpression [55-56]
          PathExpression [55-56]
            Identifier(T) [55-56]
*/
---
(source_file (ERROR))

==================
Test Case 21
==================
select f() over (order by a  rows current row) from T

/* Expected ZetaSQL AST:
QueryStatement [0-53]
  Query [0-53]
    Select [0-53]
      SelectList [7-46]
        SelectColumn [7-46]
          AnalyticFunctionCall [7-46]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-46]
              OrderBy [17-27]
                OrderingExpression(ASC) [26-27]
                  PathExpression [26-27]
                    Identifier(a) [26-27]
              WindowFrame(ROWS) [29-45]
                WindowFrameExpr(CURRENT ROW) [34-45]
      FromClause [47-53]
        TablePathExpression [52-53]
          PathExpression [52-53]
            Identifier(T) [52-53]
*/
---
(source_file (ERROR))

==================
Test Case 22
==================
select f() over (partition by a order by a) from T

/* Expected ZetaSQL AST:
QueryStatement [0-50]
  Query [0-50]
    Select [0-50]
      SelectList [7-43]
        SelectColumn [7-43]
          AnalyticFunctionCall [7-43]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-43]
              PartitionBy [17-31]
                PathExpression [30-31]
                  Identifier(a) [30-31]
              OrderBy [32-42]
                OrderingExpression(ASC) [41-42]
                  PathExpression [41-42]
                    Identifier(a) [41-42]
      FromClause [44-50]
        TablePathExpression [49-50]
          PathExpression [49-50]
            Identifier(T) [49-50]
*/
---
(source_file [0, 0] - [24, 2]
  (statement [0, 0] - [0, 50]
    (select_statement [0, 0] - [0, 50]
      (select_clause [0, 0] - [0, 43]
        (select_list [0, 7] - [0, 43]
          (select_expression [0, 7] - [0, 43]
            (expression [0, 7] - [0, 43]
              (function_call [0, 7] - [0, 43]
                (path_expression [0, 7] - [0, 8]
                  (identifier [0, 7] - [0, 8]))
                (over_clause [0, 11] - [0, 43]
                  (partition_by_clause [0, 17] - [0, 31]
                    (expression_list [0, 30] - [0, 31]
                      (expression [0, 30] - [0, 31]
                        (path_expression [0, 30] - [0, 31]
                          (identifier [0, 30] - [0, 31])))))
                  (order_by_clause [0, 32] - [0, 42]
                    (order_expression_list [0, 41] - [0, 42]
                      (order_expression [0, 41] - [0, 42]
                        (expression [0, 41] - [0, 42]
                          (path_expression [0, 41] - [0, 42]
                            (identifier [0, 41] - [0, 42]))))))))))))
      (from_clause [0, 44] - [0, 50]
        (from_item [0, 49] - [0, 50]
          (table_expression [0, 49] - [0, 50]
            (path_expression [0, 49] - [0, 50]
              (identifier [0, 49] - [0, 50])))))))
  (comment [2, 0] - [24, 2]))

==================
Test Case 23
==================
# Window clauses.
select * from T
window w1 as (),
       w2 as (partition by a order by b rows current row),
       w3 as (w1),
       w4 as (w1 partition by a order by b rows current row)

/* Expected ZetaSQL AST:
QueryStatement [0-171]
  Query [0-171]
    Select [0-171]
      SelectList [7-8]
        SelectColumn [7-8]
          Star(*) [7-8]
      FromClause [9-15]
        TablePathExpression [14-15]
          PathExpression [14-15]
            Identifier(T) [14-15]
      WindowClause [16-171]
        WindowDefinition [23-31]
          Identifier(w1) [23-25]
          WindowSpecification [29-31]
        WindowDefinition [40-90]
          Identifier(w2) [40-42]
          WindowSpecification [46-90]
            PartitionBy [47-61]
              PathExpression [60-61]
                Identifier(a) [60-61]
            OrderBy [62-72]
              OrderingExpression(ASC) [71-72]
                PathExpression [71-72]
                  Identifier(b) [71-72]
            WindowFrame(ROWS) [73-89]
              WindowFrameExpr(CURRENT ROW) [78-89]
        WindowDefinition [99-109]
          Identifier(w3) [99-101]
          WindowSpecification [105-109]
            Identifier(w1) [106-108]
        WindowDefinition [118-171]
          Identifier(w4) [118-120]
          WindowSpecification [124-171]
            Identifier(w1) [125-127]
            PartitionBy [128-142]
              PathExpression [141-142]
                Identifier(a) [141-142]
            OrderBy [143-153]
              OrderingExpression(ASC) [152-153]
                PathExpression [152-153]
                  Identifier(b) [152-153]
            WindowFrame(ROWS) [154-170]
              WindowFrameExpr(CURRENT ROW) [159-170]
*/
---
(source_file (ERROR))

==================
Test Case 24
==================
# Reference a window by name in the over clause.
select f() over (w) from T

/* Expected ZetaSQL AST:
QueryStatement [0-26]
  Query [0-26]
    Select [0-26]
      SelectList [7-19]
        SelectColumn [7-19]
          AnalyticFunctionCall [7-19]
            FunctionCall [7-10]
              PathExpression [7-8]
                Identifier(f) [7-8]
            WindowSpecification [16-19]
              Identifier(w) [17-18]
      FromClause [20-26]
        TablePathExpression [25-26]
          PathExpression [25-26]
            Identifier(T) [25-26]
*/
---
(source_file (ERROR))

==================
Test Case 25
==================
select f() over (w partition by a, b order by a, b rows current row) from T
